# BGK_traversability_mapping

./: CMakeLists.txt  README.md  package.xml
include/: utility.h
launch/: run.launch  rviz.rviz
src/: bgk_trav_filter.cpp  bgk_trav_map.cpp
